fixed overflowing text at project 2 and project 3 on smartphones

--- a/assets/style.css
+++ b/assets/style.css
@@ -77,6 +77,7 @@ p{
      line-height: 2;
      padding: 3%;
      border-radius: 3%;
+     width: 95vw;
 }
 
 #project1 img {
@@ -93,6 +94,7 @@ p{
      line-height: 2;
      padding: 3%;
      border-radius: 3%;
+     width: 95vw;
 }
 #project2 img{
     border: 3px solid white;
@@ -108,6 +110,7 @@ p{
      line-height: 2;
      padding: 3%;
      border-radius: 3%;
+     width: 95vw;
 }
 
 #project3 img{
